refactoring to base class

--- a/stankinsv2/solution/StankinsV2/StankinsStatusWeb/appsettings.json
+++ b/stankinsv2/solution/StankinsV2/StankinsStatusWeb/appsettings.json
@@ -1,82 +1,104 @@
 {
 
   "MonitorData": {
-    
-    "UserName":  "default",
-    "PingAddresses": [
+
+    "UserName": "default",
+    "ExecutorsDynamic": [
+
       {
-        "NameSite": "www.yahoo.com",
-        "CRON": "*/30 * * * * *",
+        "Data": {
+          "Type": "StankinsStatusWeb.PingAddress, StankinsAliveMonitor",
+          "NameSite": "www.yahoo.com",
+          "CRON": "*/30 * * * * *"
+        },
         "CustomData": {
-          "Tags": [ "yahoo", "ping" ],
+          "Tags": "notfound,ping",
           "Name": "yahoo",
           "Icon": "computer"
         }
 
+
       },
       {
-        "NameSite": "www.qwezxcasdadasda.com",
-        "CRON": "*/30 * * * * *",
+        "Data": {
+          "Type": "StankinsStatusWeb.PingAddress, StankinsAliveMonitor",
+          "NameSite": "www.qwezxcasdadasda.com",
+          "CRON": "*/30 * * * * *"
+        },
         "CustomData": {
-          "Tags": [ "notfound", "ping" ],
+          "Tags": "notfound,ping",
           "Name": "not found website",
           "Icon": "computer"
         }
+
+
       },
       {
-        "NameSite": "www.ipify.org",
-        "CRON": "*/30 * * * * *",
-
+        "Data": {
+          "Type": "StankinsStatusWeb.PingAddress, StankinsAliveMonitor",
+          "NameSite": "www.ipify.org",
+          "CRON": "*/30 * * * * *"
+        },
         "CustomData": {
-          "Tags": [ "ipify", "ping" ],
+          "Tags": "ipify,ping",
           "Name": "ipify website",
           "Icon": "computer"
         }
-      }
 
-    ],
-    "WebAdresses": [
+      },
       {
-        "URL": "https://api.ipify.org/?format=json",
-        "CRON": "*/30 * * * * *",
-
+        "Data": {
+          "Type": "StankinsStatusWeb.WebAdress, StankinsAliveMonitor",
+          "URL": "https://api.ipify.org/?format=json",
+          "CRON": "*/30 * * * * *"
+        },
         "CustomData": {
-          "Tags": [ "api", "ipify" ],
+          "Tags": "ipify,api",
           "Name": "ipify api",
           "Icon": "http"
         }
+
       },
       {
-        "URL": "https://www.qwezxcasdadasda.com/?format=json",
-        "CRON": "*/30 * * * * *",
+        "Data": {
+          "Type": "StankinsStatusWeb.WebAdress, StankinsAliveMonitor",
+          "URL": "https://www.qwezxcasdadasda.com/?format=json",
+          "CRON": "*/30 * * * * *"
+        },
         "CustomData": {
-          "Tags": [ "notfound", "web" ],
+          "Tags": "notfound,web",
           "Name": "not found get request",
           "Icon": "http"
         }
 
-      }
-    ],
-    "Databases": [
+      },
       {
-        "ConnectionString": "Server=.;Database=master;Trusted_Connection=True;",
-        "CRON": "* */5 * * * *",
-        "TypeOfReceiver": "Stankins.Alive.ReceiverDBSqlServer, Stankins.Alive",
+        "Data": {
+          "Type": "StankinsStatusWeb.DatabaseConnection, StankinsAliveMonitor",
+          "ConnectionString": "Server=.;Database=master;Trusted_Connection=True;",
+          "TypeOfReceiver": "Stankins.Alive.ReceiverDBSqlServer, Stankins.Alive",
+          "CRON": "*/30 * * * * *"
+        },
         "CustomData": {
-          "Tags": [ "sqlserver", "database" ],
+          "Tags": "sqlserver,database",
           "Name": "local server",
           "Icon": "library_books"
         }
+
       },
       {
-        "ConnectionString": "Server=asdasdasdfw3cfasdfa;Database=master;Trusted_Connection=True;",
-        "CRON": "* */5 * * * *",
-        "TypeOfReceiver": "Stankins.Alive.ReceiverDBSqlServer, Stankins.Alive",
+        "Data": {
+          "Type": "StankinsStatusWeb.DatabaseConnection, StankinsAliveMonitor",
+          "ConnectionString": "Server=asdasdasdfw3cfasdfa;Database=master;Trusted_Connection=True;",
+          "TypeOfReceiver": "Stankins.Alive.ReceiverDBSqlServer, Stankins.Alive",
+          "CRON": "*/30 * * * * *"
+        },
         "CustomData": {
-          "Tags": [ "sqlserver", "notfound" ],
+          "Tags": "sqlserver,not found, database",
           "Name": "not found database server",
           "Icon": "library_books"
         }
+
       }
     ]
   },
