added start process

--- a/stankinsv2/solution/StankinsV2/StankinsStatusWeb/appsettings.json
+++ b/stankinsv2/solution/StankinsV2/StankinsStatusWeb/appsettings.json
@@ -7,6 +7,21 @@
 
       {
         "Data": {
+          "Type": "StankinsStatusWeb.StartProcess, StankinsAliveMonitor",
+          "FileName": "ping.exe",
+          "Parameters": "www.yahoo.com",
+          "CRON": "*/30 * * * * *"
+        },
+        "CustomData": {
+          "Tags": "exe,ping",
+          "Name": "start ping",
+          "Icon": "process"
+        }
+
+
+      },
+      {
+        "Data": {
           "Type": "StankinsStatusWeb.PingAddress, StankinsAliveMonitor",
           "NameSite": "www.yahoo.com",
           "CRON": "*/30 * * * * *"
