--- a/stankinsv2/solution/StankinsV2/StankinsAliveAngular/tsconfig.json
+++ b/stankinsv2/solution/StankinsV2/StankinsAliveAngular/tsconfig.json
@@ -16,6 +16,14 @@
     "lib": [
       "es2018",
       "dom"
-    ]
+    ],
+    "paths": {
+      "versions": [
+        "dist/versions"
+      ],
+      "versions/*": [
+        "dist/versions/*"
+      ]
+    }
   }
 }
