--- a/stankinsv2/solution/StankinsV2/StankinsAliveAngular/tsconfig.json
+++ b/stankinsv2/solution/StankinsV2/StankinsAliveAngular/tsconfig.json
@@ -18,11 +18,12 @@
       "dom"
     ],
     "paths": {
-      "versions": [
-        "dist/versions"
+      
+      "versionsnetcoreangular": [
+        "dist/versionsnetcoreangular"
       ],
-      "versions/*": [
-        "dist/versions/*"
+      "versionsnetcoreangular/*": [
+        "dist/versionsnetcoreangular/*"
       ]
     }
   }
