--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -96,12 +96,13 @@ steps:
    docker tag stankins_windows ignatandrei/stankins_windows
    docker push ignatandrei/stankins_windows
 
-
    rem docker build . -t stankins_linux -f Dockerfile_linux
-   rem docker image ls
-   rem docker tag stankins_linux ignatandrei/stankins_linux
+    
+   docker build . -t stankins_linux -f Dockerfile_linux
+   docker image ls
+   docker tag stankins_linux ignatandrei/stankins_linux
    rem echo %MY_PASSWORD_DOCKER%| docker login --username ignatandrei --password-stdin
-   rem docker push ignatandrei/stankins_linux
+   docker push ignatandrei/stankins_linux
 
   displayName: 'docker'    
  
