--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -5,7 +5,8 @@
 #https://docs.microsoft.com/en-us/azure/devops/pipelines/build/options?view=vsts&tabs=yaml
 
 pool:
-  vmImage: 'VS2017-Win2016'
+  #vmImage: 'VS2017-Win2016'
+  vmImage:' ubuntu-16.04' # other options: 'macOS-10.13', 'vs2017-win2016'
 
 variables:
   solution: '**/StankinsV2.sln'
