--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -27,9 +27,8 @@ steps:
 
 - script: |
    dotnet tool install  --tool-path . dotnet-property
-   #ls -l
-   #pwd
-   #/home/vsts/work/1/s/dotnet-property "Stankinsv2/**/Stankins*.csproj" Version:"1.0.0.3"
+   rem ls -l
+   rem pwd   
    ./dotnet-property "Stankinsv2/**/Stankins*.csproj" Version:"1.0.0.3"
   displayName: 'DOTNET property'
 
