--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -17,6 +17,10 @@ jobs:
         echo $(Build.ArtifactStagingDirectory) $(TeamProject) $(BuildDefinitionName) $(SourceBranchName) $(Date:yyyyMMdd) $(Rev:.r)   
         echo $(Build.BuildId) $(Build.BuildNumber) 
     displayName: 'variables'
+  - task: DotNetCoreInstaller@0
+    displayName: 'Use .NET Core sdk 2.1.300'
+    inputs:
+        version: 2.1.300
 - job: Linux
   pool:
     vmImage: 'ubuntu-16.04'
