--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -43,6 +43,7 @@ jobs:
   
   - script: |
        cd stankinsv2/solution/
+       echo %MY_PASSWORD_DOCKER%
        echo %MY_PASSWORD_DOCKER% | docker login --username ignatandrei --password-stdin
        docker build . -t stankins_linux -f Dockerfile_linux      
        docker image ls
