added restore solution

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -41,6 +41,10 @@ jobs:
 
   - task: NuGetToolInstaller@0
 
+  - task: NuGetCommand@2
+        inputs:
+            restoreSolution: '$(solution)'
+  
   - task: VSBuild@1
     inputs:
       solution: '$(solution)'
