--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -131,7 +131,7 @@ jobs:
   - task: GithubRelease@0
     inputs:
       gitHubConnection: ignatandrei
-      repositoryName: stankins
+      repositoryName: ignatandrei/stankins
 
   dependsOn: 
   - Windows
